--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
   padding: 0;
 }
 
-body {
+html, body {
   font-family: 'Poppins', sans-serif;
+  height: 100%;
 }
 
 /* Top Header */
@@ -32,10 +33,11 @@ body {
 }
 
 /* Main Content */
-.container {
+#container {
   width: 1000px;
   margin-left: auto;
   margin-right: auto;
+  /* height: 100%; */
 }
 
 #leftMenu {
@@ -106,19 +108,83 @@ section .summary {
   padding-top: 0.5em;
 }
 
-/* Footer */
+/* Footer styling*/
 footer {
   text-align: center;
   padding-top: 1.25em;
-  height: 50px;
   background: #295197;
   color: #fff;
+  clear: both;
+  height: 200px;
+  position: relative;
+  bottom: -200px;
 }
 
 footer > small > a {
   text-decoration: none;
   color: #fff;
   font-style: italic;
+}
+
+/* Form styling */
+#formContainer {
+    width: 75%;
+    margin: 0 auto;
+    background-color: #999;
+    padding: 1%;
+}
+
+h2 {
+  text-align: center;
+  color: #295197;
+  margin: 1em 0 1em 0;
+}
+
+form, 
+.thankYou{
+  width: 75%;
+  background-color: #fff;
+  margin: 2em auto;
+  padding: 2%;
+  border-radius: 5px;
+}
+
+fieldset {
+  padding: 4px;
+}
+
+legend {
+  text-align: center;
+  font-weight: 600;
+}
+
+.form-control {
+  display: flex;
+  flex-direction: column;
+}
+
+input, select  {
+  padding: 5px;
+}
+
+.buttons {
+  background-color: #295197;
+  color: #fff;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-radius: 4px;
+  margin: 1em 1em;
+}
+
+/* Thank you page and admin confirm page styling */
+.thanksResponse,.adminConfirmText {
+  text-align: justify;
+  margin: 2em 0 2em 0;
+  padding: 8px;
+}
+
+.adminConfirmLink {
+  text-align: center;
 }
 
 /* Media Queries */
